feat/test: [#24] 콘서트 예약 가능 날짜/좌석 조회 리팩토링, custom exception 구현
- controller 구현 및 테스트 추가 리팩토링
- 좌석 더미 데이터 수정
- 메서드 주석 추가
- 읽기 전용 transactional 수정
- concertFacade 구현 및 테스트 추가